head section done

--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,8 @@
 .app{
   min-height: 100vh;
   min-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 }
