--- a/src/Screen/ChatBot/ChatBot.css
+++ b/src/Screen/ChatBot/ChatBot.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     background-color: white;
+    border-radius: 10px;
 }
 .chat-bot .head{
     display: flex;
@@ -10,6 +11,7 @@
     align-items: center;
     background-color: black;
     padding: 10px 20px;
+    border-radius: 10px 10px 0 0;
 }
 .chat-bot .head .close{
     color: white;
@@ -28,7 +30,7 @@
     align-items: center;
     justify-content: center;
     padding: 8px;
-    font-size: 32px;
+    font-size: 28px;
     border-radius: 50%;
 }
 .chat-bot .head .bot-name .bots-name{
@@ -81,4 +83,22 @@
     background-color: rgb(220, 218, 218);
     padding: 15px 20px;
     border-radius: 0 15px 15px 15px;
+}
+
+.chat-bot .foot{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    gap: 10px;
+}
+.chat-bot .foot .text input{
+    width: 400px;
+    border: none;
+    padding: 5px 20px;
+}
+.chat-bot .foot .icon{
+    font-size: 26px;
+    color: rgb(182, 180, 180);
+    cursor: pointer;
 }
