--- a/src/Screen/ChatBot/ChatBot.css
+++ b/src/Screen/ChatBot/ChatBot.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     background-color: white;
     border-radius: 10px;
+    border: 7px solid #a48ed2;
+    box-shadow: 10px 10px 30px black;
 }
 .chat-bot .head{
     display: flex;
@@ -11,7 +13,7 @@
     align-items: center;
     background-color: black;
     padding: 10px 20px;
-    border-radius: 10px 10px 0 0;
+    border-radius: 5px 5px 0 0;
 }
 .chat-bot .head .close{
     color: white;
@@ -25,6 +27,7 @@
     gap: 10px;
 }
 .chat-bot .head .bot-name .icon{
+    color: #0f9bf0;
     background-color: white;
     display: flex;
     align-items: center;
