--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,26 @@
   padding: 0;
   box-sizing: border-box;
 }
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Spicy+Rice&display=swap');
+
 .app{
   min-height: 100vh;
   min-width: 100vw;
-  font-family: "Rubik", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 100px;
+  padding:2rem;
   background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+}
+
+@media (max-width:840px) {
+  .app{
+    gap:30px
+  }
+}
+@media (max-width:770px) {
+  .app{
+    flex-direction: column;
+    gap: 100px;
+  }
 }
